# auto-browser

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  ROADMAP.md  TIPS.md  docker-compose.codespaces.yml  docker-compose.yml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml
browser-node/: Dockerfile  entrypoint.sh  package-lock.json  package.json  server.mjs
client/: README.md  pyproject.toml
client/auto_browser_client/: __init__.py  client.py
client/tests/: test_client_paths.py
controller/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
controller/app/: __init__.py  agent_eval.py  agent_jobs.py  app_factory.py  approvals.py  artifacts.py  audit.py  auth_state.py  browser_manager.py  browser_scripts.py  compliance.py  config.py  cron_service.py  curator_llm.py  downloads.py  events.py  main.py  mcp_transport.py  memory_manager.py  metrics.py  models.py  network_inspector.py  ocr.py  orchestrator.py  pii_scrub.py  playwright_export.py  provider_registry.py  proxy_personas.py  rate_limits.py  readiness.py  runtime_policy.py  session_share.py  (+5 more)
docs/: agent-evals.md  architecture.md  architecture.mmd  deployment.md  good-first-issues.md  launch.md  llm-adapters.md  mcp-clients.md  production-hardening.md
evals/: agent_cases.json  fixture_cases.json
examples/: crewai-integration.md  cursor-mcp-setup.md  langchain-integration.md
scripts/: agent_eval.py  bootstrap_cli_auth.sh  doctor.sh  fixture_eval.py  glama_entrypoint.sh  load_env.sh  release_audit.py  release_audit.sh  smoke_isolated_session.sh
(+108 files in other folders)
