[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "auto-browser-client"
version = "0.3.0"
description = "Python client SDK for auto-browser"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
